Fix header mobile text-align

--- a/static/mobile.css
+++ b/static/mobile.css
@@ -10,6 +10,7 @@
 
 		h2 {
 			font-size: 20px;
+			text-align: center;
 		}
 
 		nav {
@@ -69,6 +70,7 @@
 
 		h2 {
 			font-size: 20px;
+			text-align: center;
 		}
 
 		nav {
@@ -128,6 +130,7 @@
 
 		h2 {
 			font-size: 30px;
+			text-align: center;
 		}
 
 		nav {
@@ -187,6 +190,7 @@
 
 		h2 {
 			font-size: 40px;
+			text-align: center;
 		}
 
 		nav {
